# redoc_issue_with_union_mini_example

./: .gitignore  README.md  pyproject.toml
redoc_issue_with_union_mini_example/: main.py  openapi.json
redoc_issue_with_union_mini_example.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
redoc_issue_with_union_mini_example/redoc/: index.html  openapi.json  openapi_MANUALLY EDITED_WORKING.json
