[tool.poetry]
name = "redoc_issue_with_union_mini_example"
version = "0.1.0"
description = ""
authors = ["Klaus Strohmenger <klaus.strohmenger@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
uvicorn = "^0.12.2"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
